added link to css and edited html with search bar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Giphy</title>
+    <!-- Bootstrap link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- CSS Link -->
+        <link rel="stylesheet" type="text/css" media="screen" href="../Giphi/assets/style.css" />
+
 </head>
+
 <body>
-    
+        <div id="header">
+                <div id="search-bar">Add a Car!
+                    <input id="search-text" type="text" placeholder="Honda" />
+                    <button id="search-btn" type="submit">Search</button>
+                    <button id="reset-btn">Reset</button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+
+    <!-- JQuery link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Javascript link -->
+    <script type="text/javascript" src="../Giphi/assets/app.js"></script>
+
+
 </body>
+
 </html>
