--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                     <button id="reset-btn">Reset</button>
                 </div>
             </div>
+         </div>
 
-        </form>
-    </div>
-
+        <div id= "buttons"></div>
     <!-- JQuery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
