--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-        <div id="header">
+        <form id="header">
                 <div id="search-bar">Add a Car!
                     <input id="search-text" type="text" placeholder="Honda" />
                     <button id="search-btn" type="submit">Search</button>
                     <button id="reset-btn">Reset</button>
                 </div>
             </div>
-         </div>
+        </form>
 
         <div id= "buttons"></div>
     <!-- JQuery link -->
