--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </form>
 
         <div id= "buttons"></div>
+        <div id="gifs-here"></div>
     <!-- JQuery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
