added to functions to js

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                 <div id="search-bar">Add a Car!
                     <input id="search-text" type="text" placeholder="Honda" />
                     <button id="search-btn" type="submit">Search</button>
-                    <button id="reset-btn">Reset</button>
                 </div>
             </div>
         </form>
 
-        <div id= "buttons"></div>
+        <div id= "car-buttons"></div>
         <div id="gifs-here"></div>
     <!-- JQuery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
