start and stop animation works

--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
             </div>
         </form>
 
-        <div id= "car-buttons"></div>
-        <div id="gifs-here"></div>
+    <div class= "row">
+        <div class="container">
+            <span>
+                <div id= "gifs-here">
+                <div id= "car-buttons"></div>
+                </div>
+            </span>
+        </div>
+    </div>
+            
+    </div>
+        
     <!-- JQuery link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
